<resources>
    <string name="app_name">LoveCoupon</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="title_you_are">You are</string>
    <string name="title_shop">Shop</string>
    <string name="title_customer">Customer</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_login">Login</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_google">Google</string>
    <string name="title_reset_password">Send Email</string>
    <string name="msg_email_error">Email is not correct</string>
    <string name="action_send_email_success">Send email success, please check email!</string>
    <string name="send_email_fails">Send email failed</string>
    <string name="agree">AGREE</string>
    <string name="menu_coupon">Coupon</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_history">History</string>
    <string name="menu_share">Share</string>
    <string name="menu_log_out">Logout</string>
    <string name="title_like">Like</string>
    <string name="title_share">Share</string>
    <string name="title_more">More</string>
    <string name="msg_share">We are like you, love coupons and promotions</string>
    <string name="title_contact">Contact Our Team:</string>
    <string name="title_support">info@lovecoupon.com</string>
    <string name="title_web">www.lovecoupon.com</string>
    <string name="msg_please_question">Please contact us if you have any question</string>
    <string name="msg_only_admin">Only for admin</string>
    <string name="hint_user1">User 1</string>
    <string name="title_check_admin">Admin</string>
    <string name="hint_shop_name">Name shop</string>
    <string name="hint_shop_address">Shop address</string>
    <string name="title_show_password">Show password</string>
    <string name="hint_user2">User 2</string>
    <string name="title_create">Create</string>
    <string name="title_use">Use</string>
    <string name="menu_other_notification">Other notification</string>
    <string name="key_google_server">672185057715-866s5fulqp63uph3as26i0ranm8e8934.apps.googleusercontent.com</string>
    <string name="key_facebook">1875391312728728</string>
    <string name="msg_login_error">Login failed</string>
    <string name="msg_password_error">Password is not empty.</string>
    <string name="msg_load_data_error">Load data failed.</string>
    <string name="msg_network_error">Internet connection is not available</string>
    <string name="msg_send_email">Send email</string>
    <string name="msg_share_facebook">The app for shop and beloved customers</string>
    <string name="msg_description_share_facebook">With LoveCoupon, the shops can reward coupons and send promotions to beloved customers easily , the customers do not need to bring paper coupons and never miss any promotions from favorite shops</string>
    <string name="msg_existing">*User Existed</string>
    <string name="bind_number_image">%d</string>
    <string name="msg_load_image_error">Do not load image, please reload.</string>
    <string name="title_albums">Albums</string>
    <string name="title_all_albums">All albums</string>
    <string name="msg_crop_logo_error">Create logo failed.</string>
    <string name="msg_shop_name_error">Name of shop not empty.</string>
    <string name="msg_shop_address_error">Address of shop not empty.</string>
    <string name="msg_update_profile_error">Update information failed, please again.</string>
    <string name="bind_coupon_template_day">%d days</string>
    <string name="action_other_code">Other Code</string>
    <string name="title_coupon_creation">Coupon %1$S</string>
    <string name="action_create_coupon_error">Create coupon failed.</string>
    <string name="action_edit_notification">Edit</string>
    <string name="action_delete_notification">Delete</string>
    <string name="title_delete_notification">Do you want to delete this news</string>
    <string name="msg_delete_success">Delete success</string>
    <string name="msg_delete_error">Delete failed</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_link">Link</string>
    <string name="title_create_notification">Create News</string>
    <string name="title_edit_notification">Edit News</string>
    <string name="title_deadline">Deadline</string>
    <string name="hint_description">Description</string>
    <string name="hint_amount">Amount</string>
    <string name="text_duration">Duration</string>
    <string name="title_template_creation">Create Coupon Template</string>
    <string name="text_month_1">1 month</string>
    <string name="text_month_2">2 months</string>
    <string name="text_month_3">3 months</string>
    <string name="text_month_4">4 months</string>
    <string name="text_month_5">5 months</string>
    <string name="text_month_6">6 months</string>
    <string name="text_month_7">7 months</string>
    <string name="text_month_8">8 months</string>
    <string name="text_month_9">9 months</string>
    <string name="text_month_10">10 months</string>
    <string name="text_month_11">11 months</string>
    <string name="text_month_12">12 months</string>
    <string name="msg_content_error">Content not empty</string>
    <string name="msg_amount_error">Amount not empty</string>
    <string name="msg_create_error">Create  failed</string>
    <string name="action_generate_coupon">Generate coupon</string>
    <string name="msg_send_email_error">Reset password failed</string>
    <string name="msg_title_error">Title not empty</string>
    <string name="facebook_avatar">https://graph.facebook.com/%s/picture?type=large</string>
    <string name="title_delete_cooupon">Do you want to delete this Coupon</string>
    <string name="bind_number_coupon">%d  coupon</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_create_success">Add coupon success.</string>
    <string name="msg_add_coupon_error">The code is not valid or already used</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="msg_update_profile_success">Update success</string>
</resources>
