<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.nhahv.lovecoupon.ui.login.LoginType"/>

        <variable
            name="viewModel"
            type="com.nhahv.lovecoupon.ui.login.LoginViewModel"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg_app">

        <LinearLayout
            android:layout_width="@dimen/dp_250"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_82">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_2"
                android:text="@={viewModel.email}"
                android:textCursorDrawable="@drawable/ic_cursor"
                app:met_floatingLabelTextColor="@android:color/white"
                app:met_hideUnderline="false"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@android:color/white"
                app:met_textColorHint="@color/color_grey_700"
                app:met_underlineColor="@android:color/white"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/dp_2"
                android:text="@={viewModel.password}"
                android:textCursorDrawable="@drawable/ic_cursor"
                app:met_floatingLabelTextColor="@android:color/white"
                app:met_hideUnderline="false"
                app:met_primaryColor="@android:color/white"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@android:color/white"
                app:met_textColorHint="@color/color_grey_700"
                app:met_underlineColor="@android:color/white"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:onClick="@{()->viewModel.clickLogin(LoginType.NORMAL)}"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/dp_4"
                app:cardElevation="@dimen/dp_4"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    android:text="@string/title_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.clickLogin(LoginType.FACEBOOK)}"
                app:cardBackgroundColor="@color/color_blue_600"
                app:cardCornerRadius="@dimen/dp_4"
                app:cardElevation="@dimen/dp_4"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    android:text="@string/title_facebook"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.clickLogin(LoginType.GOOGLE)}"
                app:cardBackgroundColor="@color/color_red_600"
                app:cardCornerRadius="@dimen/dp_4"
                app:cardElevation="@dimen/dp_4"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    android:text="@string/title_google"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="@dimen/dp_250"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:onClick="@{()->viewModel.clickResetPassword()}"
                android:padding="@dimen/dp_12"
                android:text="@string/title_forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>
    </ScrollView>
</layout>
