<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.nhahv.lovecoupon.ui.share.ShareViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_250"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_love_coupon"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_56"
                    android:text="@string/msg_share"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_24"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/dp_14"
                app:layout_behavior="@id/frame_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:text="@string/title_contact"
                    android:textSize="@dimen/sp_20"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:onClick="@{()->viewModel.clickSendEmail()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/title_support"
                        android:textSize="@dimen/sp_18"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_email_grey"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:onClick="@{()->viewModel.clickToWeb()}"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/title_web"
                        android:textSize="@dimen/sp_18"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_public_grey_24dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:text="@string/msg_please_question"
                    android:textSize="@dimen/sp_18"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:onClick="@{()->viewModel.clickShare()}"
            app:layout_anchor="@+id/frame_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/ic_share_white_24dp"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>
