<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.nhahv.lovecoupon.ui.firstscreen.AccountType"/>

        <variable
            name="viewModel"
            type="com.nhahv.lovecoupon.ui.firstscreen.FirstScreenViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg_app"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_50">

        <LinearLayout
            android:layout_width="@dimen/dp_250"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_you_are"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_30"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:onClick="@{()->viewModel.clickStartUiLogin(AccountType.SHOP)}"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/dp_4"
                app:cardElevation="@dimen/dp_4"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    android:text="@string/title_shop"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.clickStartUiLogin(AccountType.CUSTOMER)}"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/dp_4"
                app:cardElevation="@dimen/dp_4"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    android:text="@string/title_customer"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</layout>
