<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.nhahv.lovecoupon.ui.shop.templatecreation.TemplateCreationViewModel"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_20"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_30"
                    android:hint="@string/hint_amount"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@={viewModel.template.value}"
                    android:textColor="@drawable/cursor_edit_text"
                    app:met_floatingLabel="highlight"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/dp_8"
                        android:paddingTop="@dimen/dp_8"
                        android:text="@string/text_duration"
                        android:textSize="@dimen/sp_18"/>

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner_month"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:entries="@array/spinner_month"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dp_8"
                        android:paddingTop="@dimen/dp_8"/>
                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/hint_description"
                    android:text="@={viewModel.template.content}"
                    android:textColor="@drawable/cursor_edit_text"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="150"
                    app:met_primaryColor="@color/colorAccent"/>

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_30"
                    android:onClick="@{()->viewModel.clickCreateTemplate()}"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/dp_4"
                    app:cardElevation="@dimen/dp_6"
                    app:cardUseCompatPadding="true">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/dp_10"
                        android:text="@string/title_create"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_16"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
