<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.nhahv.lovecoupon.ui.shop.notificationcreation.NotificationCreationViewModel"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layout_add_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical"
                android:padding="@dimen/dp_16">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@={viewModel.notification.title}"
                    android:textColor="@drawable/cursor_edit_text"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="200"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/hint_content"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@={viewModel.notification.content}"
                    android:textColor="@drawable/cursor_edit_text"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="250"
                    app:met_primaryColor="@color/colorAccent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:onClick="@{()->viewModel.clickPickDate()}"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/title_deadline"
                        android:textSize="@dimen/sp_18"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/date_add_message"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_18"
                        bind:bindText="@{viewModel.notification.lastDate}"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="end|center_vertical"
                        android:padding="@dimen/dp_6"
                        app:srcCompat="@drawable/ic_calendar_grey"/>
                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/text_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/hint_link"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@={viewModel.notification.link}"
                    android:textColor="@drawable/cursor_edit_text"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="100"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_150"
                    android:visibility="@{viewModel.listImage.size() == 0 ? View.GONE : View.VISIBLE}"
                    bind:adapterLinear="@{viewModel.adapter}"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_42"
                    android:layout_height="@dimen/dp_42"
                    android:layout_marginTop="@dimen/dp_10"
                    android:onClick="@{()->viewModel.clickPickImage()}"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_photo_grey_24dp"/>

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/dp_4"
                    app:cardElevation="@dimen/dp_6"
                    app:cardUseCompatPadding="true">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="@{()-> viewModel.clickCreateNotification()}"
                        android:paddingBottom="@dimen/dp_12"
                        android:paddingTop="@dimen/dp_12"
                        android:text="@string/title_create"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
